添加作品链接

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
         <div class="strip"><img src="img/pro.png"/></div>
         <div class="project-content container">
             <div class="item col-sm-4">
-                <a href="javascript:void(0);">
+                <a href="myProject/仿miui/index.html">
                     <img src="img/pro-1.jpg"/>
                     <p>高仿miui网站</p>
                 </a>
             </div>
             <div class="item col-sm-4">
-                <a href="javascript:void(0);">
+                <a href="myProject/响应式布局实战/index.html">
                     <img src="img/pro-2.jpg"/>
                     <p>响应式理财网站</p>
                 </a>
@@ -131,12 +131,6 @@
                 <a href="javascript:void(0);">
                     <img src="img/pro-4.jpg"/>
                     <p>简易博客网站</p>
-                </a>
-            </div>
-            <div class="item col-sm-4">
-                <a href="javascript:void(0);">
-                    <img src="img/pro-5.jpg"/>
-                    <p>企业网站</p>
                 </a>
             </div>
         </div>
