--- a/myProject/仿miui/index.html
+++ b/myProject/仿miui/index.html
@@ -459,7 +459,7 @@
 </div>
 
 <div class="scrolltop">
-  <a href="#" id="scrolltop"></a>
+  <div href="#" id="scrolltop"></div>
 </div>
 </body>
 </html>
